force-app/main/default/objects/ssot__ChangeRequestRelatedItem__dlm/fields/ssot__ChangeRequestId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ChangeRequestId__c</fullName>
    <label>Change Request</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ChangeRequestId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>