force-app/main/default/objects/ssot__ChangeRequestRelatedItem__dlm/fields/ssot__ChangeRequestItemImpact__c.field-meta.xml
<CustomField>
    <fullName>ssot__ChangeRequestItemImpact__c</fullName>
    <label>Change Request Item Impact</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ChangeRequestItemImpact</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>