force-app/main/default/objects/ssot__ChangeRequestRelatedItem__dlm/fields/ssot__ChangeRequestRelatedItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ChangeRequestRelatedItemNumber__c</fullName>
    <label>Change Request Related Item Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ChangeRequestRelatedItemNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>