force-app/main/default/objects/ssot__ChangeRequestRelatedItem__dlm/fields/ssot__rel_1702009449112_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009449112_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChangeRequestRelatedItem_ChangeReque_rel</label>
    <referenceTo>ssot__ChangeRequest__dlm</referenceTo>
    <relationshipLabel>ChangeRequestRelatedItem_ChangeReque_rel</relationshipLabel>
    <relationshipName>rel_1702009449112_end</relationshipName>
    <type>Lookup</type>
</CustomField>