force-app/main/default/objects/ssot__ChangeRequestRelatedItem__dlm/fields/ssot__rel_1702009467588_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009467588_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChangeRequestRelatedItem_RelatedRefe_rel</label>
    <referenceTo>ssot__Asset__dlm</referenceTo>
    <relationshipLabel>ChangeRequestRelatedItem_RelatedRefe_rel</relationshipLabel>
    <relationshipName>rel_1702009467588_end</relationshipName>
    <type>Lookup</type>
</CustomField>